kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-web-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-web-app
  template:
    metadata:
      labels:
        app: flask-web-app
    spec:
      containers:
      - name: flask-web-app
        image: flask-web-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
