kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-web-app-service
spec:
  selector:
    app: flask-web-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080
