kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-web-app-network-policy
spec:
  podSelector:
    matchLabels:
      app: flask-web-app
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector: {}
    ports:
    - protocol: TCP
      port: 5000
